# VTKPythonPackage

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.rst  appveyor.yml  build_vtk_wheel.sh  config.sh  readme.md  requirements-dev.txt  setup.py  vtkVersion.py
cmake/: VTKPythonPackage.cmake
docker/: Dockerfile  Dockerfile.aarch64
docs/: Automated_wheels_building_with_scripts.rst  Detailed_build_instructions.rst  Miscellaneous.rst  conf.py  index.rst
scripts/: build.sh  dockcross-manylinux-build-tarball.sh  macos-build-tarball.sh  macos_build_wheel.py  macos_build_wheels.py  osx_build_wheels.py  prepare-docker.sh  prepare-linux.sh  prepare-osx.sh  start.sh  update_python_version.py  update_python_version.sh  windows-build-tarball.ps1  windows_build_wheels.py
scripts/internal/: macos_build_common.py  manylinux-build-wheels.sh  windows_build_common.py
